--- a/DBSysCore/DBSysCore.csproj
+++ b/DBSysCore/DBSysCore.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <Authors>Klimenko A.</Authors>
+    <Company>DSPLAB</Company>
+    <Product>DBSys</Product>
   </PropertyGroup>
 
   <ItemGroup>
